# rustrade

./: .gitignore  .todo  Cargo.toml  README.md  check.sh  command_plot.sh  command_triangle.sh  flow.drawio  run.sh  rustfmt.toml  selection.json  stream_check.sh  stream_get_selection.sh  stream_import.sh  stream_set_selection.sh  test_stream.sh
command/: check.sh  command_back_test.sh  command_plot.sh  command_plot_brl.sh  command_triangle.sh  run.sh  stream_plot.sh
migrations/: 20210131000254_initial.sql
res/: up.sql
scripts/: start-pgadmin.sh  start-postgresql.sh
src/: analyzer.rs  candles_range.rs  checker.rs  config.rs  exchange.rs  main.rs  plotter.rs  repository.rs  synchronizer.rs  utils.rs
src/analyzers/: ema_tac.rs  indicator.rs  macd_tac.rs  mod.rs  pivots.rs  serie.rs  technical.rs
src/application/: app.rs  candles_provider.rs  candles_retriever.rs  candles_selection.rs  mod.rs  plot_selection.rs  streamer.rs
src/candles_provider/: candles_buffer.rs  candles_exchange.rs  candles_provider.rs  candles_repo.rs  candles_resolver.rs  mod.rs
src/config/: candles_selection.rs  config.rs  definition.rs  mod.rs  now_provider.rs  selection.rs  symbol_minutes.rs
src/model/: candle.rs  candles_result.rs  mod.rs  open_close.rs  symbol.rs
src/provider/: candles_buffer.rs  device_buffer.rs  device_exch.rs  device_repo.rs  device_trait.rs  mod.rs
src/strategy/: back_test_runner.rs  macd_stra.rs  macd_trend.rs  mod.rs  order_executor.rs  pivots_triangle.rs  topbottom_triangle.rs  trade_context_provider.rs  trader.rs  trader_register.rs  trend.rs  trend_prov_factory.rs  trend_provider.rs
src/strategy/model/: flow.rs  mod.rs  order.rs  position.rs  profit.rs
src/tac_plotters/: candles_plotter.rs  ema_plotter.rs  indicator_plotter.rs  line_ind_plotter.rs  macd_plotter.rs  mod.rs  pivot_plotter.rs  plotter.rs  tac_plotter.rs  theme_plotter.rs  topbottom_plotter.rs  trading_plotter.rs
src/technicals/: ema_tac.rs  heikin_ashi.rs  ind_group.rs  ind_provider.rs  ind_type.rs  indicator.rs  mod.rs  pivots.rs  serie.rs  sma_tac.rs  technical.rs  topbottom.rs
src/technicals/macd/: macd_ind.rs  macd_tac.rs  mod.rs
src/utils/: log_utils.rs  mod.rs
